# personal-ai-assistant

./: .gitignore  MASTER_PROMPT.md  jarvis_analysis_and_implementation_plan.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py
ai/: __init__.py  agent_executor.py  brain.py  model_router.py  planner.py
api/: __init__.py  api_server.py
background/: __init__.py  scheduler.py  worker.py
config/: __init__.py  settings.yaml
core/: __init__.py  assistant.py  command_interpreter.py  context_manager.py  event_engine.py  state_manager.py  task_orchestrator.py
logs/: .gitkeep
logs/memory/: long_term.db
logs/memory/faiss/: embeddings.pkl  metadata.json
memory/: __init__.py  long_term.py  memory_manager.py  vector_memory.py
modules/: __init__.py
modules/automation/: __init__.py
modules/speech/: __init__.py  audio_stream.py  text_input.py  tts_engine.py  voice_listener.py  wake_word_detector.py
modules/vision/: __init__.py
plugins/: .gitkeep
security/: __init__.py
tests/: __init__.py  test_brain.py  test_config.py  test_interpreter.py  test_model_router.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_security.py  test_state.py  test_tools.py
tools/: __init__.py  builtin_tools.py  file_manager.py  hardware_tools.py  memory_tools.py  network_tools.py  system_control.py  tool_executor.py  tool_registry.py  web_tools.py
ui/: dashboard.py
